incomplete work page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "main",
+  "homepage": "https://feliceho006.github.io/main/"
   "version": "0.1.0",
   "private": true,
   "dependencies": {
