--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "main",
-  "homepage": "https://feliceho006.github.io/main/",
+  "homepage": "https://feliceho006.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
